security.tf
# Postgres DB Instance SG
resource "aws_security_group" "instance_sg" {
  name        = "Instance-sg"
  description = "Allow SSH and PostgreSQL traffic to access the instance"
  vpc_id      = aws_vpc.database_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Postgres-Database-SG"
  }

}
